Refactor to functional