@@ -5,14 +5,15 @@ import com.google.cloud.spanner.DatabaseClient;
 import com.google.cloud.spanner.Key;
 import com.google.cloud.spanner.Mutation;
 import com.google.cloud.spanner.Struct;
+import com.google.cloud.spanner.TransactionContext;
 import net.javacrumbs.shedlock.core.LockConfiguration;
 import net.javacrumbs.shedlock.support.AbstractStorageAccessor;
 import net.javacrumbs.shedlock.support.Utils;
 import net.javacrumbs.shedlock.support.annotation.NonNull;
 
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 
 public class SpannerStorageAccessor extends AbstractStorageAccessor {
 
@@ -31,116 +32,123 @@ public class SpannerStorageAccessor extends AbstractStorageAccessor {
 
     @Override
     public boolean insertRecord(@NonNull LockConfiguration lockConfiguration) {
-        Boolean result = spannerClient.readWriteTransaction().run(transactionContext -> {
-            Struct row = transactionContext.readRow(TABLE, Key.of(lockConfiguration.getName()), List.of(LOCK_UNTIL));
-
-            if (row != null) {
-                // Lock already exists
-                return false;
-            }
-
-            Mutation insertMutation = Mutation.newInsertBuilder(TABLE)
-                    .set(NAME)
-                    .to(lockConfiguration.getName())
-                    .set(LOCK_UNTIL)
-                    .to(spannerTimestampOf(lockConfiguration.getLockAtMostUntil()))
-                    .set(LOCKED_AT)
-                    .to(Timestamp.now())
-                    .set(LOCKED_BY)
-                    .to(hostname)
-                    .build();
-            transactionContext.buffer(insertMutation);
-            return true;
-        });
-
-        return Boolean.TRUE.equals(result);
+        return Boolean.TRUE.equals(spannerClient.readWriteTransaction().run(transaction ->
+            transactionallyFindLock(transaction, lockConfiguration)
+                .map(lock -> false) // Lock already exists, so we return false.
+                .orElseGet(() -> {
+                    transaction.buffer(Mutation.newInsertBuilder(TABLE)
+                        .set(NAME).to(lockConfiguration.getName())
+                        .set(LOCK_UNTIL).to(toTimestamp(lockConfiguration.getLockAtMostUntil()))
+                        .set(LOCKED_AT).to(Timestamp.now())
+                        .set(LOCKED_BY).to(hostname)
+                        .build());
+                    return true;
+                })
+        ));
     }
+
 
     @Override
     public boolean updateRecord(@NonNull LockConfiguration lockConfiguration) {
-        Boolean result = spannerClient.readWriteTransaction().run(transactionContext -> {
-            Struct row = transactionContext.readRow(TABLE, Key.of(lockConfiguration.getName()), List.of(LOCK_UNTIL));
+        return Boolean.TRUE.equals(spannerClient.readWriteTransaction().run(transaction ->
+            transactionallyFindLock(transaction, lockConfiguration)
+                .filter(lock -> lock.getLockedUntil().compareTo(Timestamp.now()) <= 0)
+                .map(lock -> {
+                    transaction.buffer(Mutation.newUpdateBuilder(TABLE)
+                        .set(NAME).to(lockConfiguration.getName())
+                        .set(LOCK_UNTIL).to(toTimestamp(lockConfiguration.getLockAtMostUntil()))
+                        .set(LOCKED_AT).to(Timestamp.now())
+                        .set(LOCKED_BY).to(hostname)
+                        .build());
+                    return true;
+                }).orElse(false)
+        ));
+    }
 
-            if (row == null) {
-                return false;
-            }
-
-            Timestamp existingLockUntil = row.getTimestamp(LOCK_UNTIL);
-
-            // Check if the lock can be updated based on the existing lock_until value
-            if (existingLockUntil.compareTo(Timestamp.now()) <= 0) {
-
-                Mutation updateMutation = Mutation.newUpdateBuilder(TABLE)
-                        .set(NAME)
-                        .to(lockConfiguration.getName())
-                        .set(LOCK_UNTIL)
-                        .to(spannerTimestampOf(lockConfiguration.getLockAtMostUntil()))
-                        .set(LOCKED_AT)
-                        .to(Timestamp.now())
-                        .set(LOCKED_BY)
-                        .to(hostname)
-                        .build();
-                transactionContext.buffer(updateMutation);
-                return true;
-            }
-            return false; // Lock cannot be updated because it is still valid
-        });
-
-        return Boolean.TRUE.equals(result);
+    @Override
+    public boolean extend(@NonNull LockConfiguration lockConfiguration) {
+        return Boolean.TRUE.equals(spannerClient.readWriteTransaction().run(transaction ->
+            transactionallyFindLock(transaction, lockConfiguration)
+                .filter(lock -> hostname.equals(lock.getLockedBy()))
+                .filter(lock -> lock.getLockedUntil().compareTo(Timestamp.now()) > 0)
+                .map(lock -> {
+                    transaction.buffer(
+                        Mutation.newUpdateBuilder(TABLE)
+                            .set(NAME).to(lockConfiguration.getName())
+                            .set(LOCK_UNTIL).to(toTimestamp(lockConfiguration.getLockAtMostUntil()))
+                            .build());
+                    return true;
+                }).orElse(false)));
     }
 
     @Override
     public void unlock(@NonNull LockConfiguration lockConfiguration) {
         spannerClient.readWriteTransaction().run(transaction -> {
-            Struct row = transaction.readRow(TABLE, Key.of(lockConfiguration.getName()), List.of(LOCKED_BY));
-
-            // Proceed only if the row exists and lockedBy matches this instance
-            if (row != null) {
-                String lockedBy = row.getString(LOCKED_BY);
-                if (hostname.equals(lockedBy)) {
-                    Mutation mutation = Mutation.newUpdateBuilder(TABLE)
-                            .set(NAME)
-                            .to(lockConfiguration.getName())
-                            .set(LOCK_UNTIL)
-                            .to(spannerTimestampOf(lockConfiguration.getUnlockTime()))
-                            .build();
-                    transaction.buffer(mutation);
-                }
-            }
+            transactionallyFindLock(transaction, lockConfiguration)
+                .filter(lock -> hostname.equals(lock.getLockedBy()))
+                .ifPresent(lock ->
+                    transaction.buffer(
+                        Mutation.newUpdateBuilder(TABLE)
+                            .set(NAME).to(lockConfiguration.getName())
+                            .set(LOCK_UNTIL).to(toTimestamp(lockConfiguration.getUnlockTime()))
+                            .build()));
             return null;
         });
     }
 
-    @Override
-    public boolean extend(@NonNull LockConfiguration lockConfiguration) {
-        Boolean result = spannerClient.readWriteTransaction().run(transaction -> {
-            Struct row = transaction.readRow(
-                    TABLE, Key.of(lockConfiguration.getName()), Arrays.asList(LOCK_UNTIL, LOCKED_BY));
+    private Optional<SpannerLock> transactionallyFindLock(TransactionContext transaction, LockConfiguration lockConfiguration) {
+        Struct row = transaction
+            .readRow(
+                TABLE,
+                Key.of(lockConfiguration.getName()),
+                List.of(LOCK_UNTIL, LOCKED_BY, LOCKED_AT));
 
-            if (row == null) {
-                return false;
-            }
-
-            String lockedBy = row.getString(LOCKED_BY);
-            Timestamp lockUntil = row.getTimestamp(LOCK_UNTIL);
-
-            // Extend lock only if held by the same instance and not expired
-            if (hostname.equals(lockedBy) && lockUntil.compareTo(Timestamp.now()) > 0) {
-                Mutation updateMutation = Mutation.newUpdateBuilder(TABLE)
-                        .set(NAME)
-                        .to(lockConfiguration.getName())
-                        .set(LOCK_UNTIL)
-                        .to(spannerTimestampOf(lockConfiguration.getLockAtMostUntil()))
-                        .build();
-                transaction.buffer(updateMutation);
-                return true;
-            }
-            return false; // Not this instance's lock or expired.
-        });
-        return Boolean.TRUE.equals(result);
+        return Optional.ofNullable(row).map(SpannerLock::new);
     }
 
-    private Timestamp spannerTimestampOf(Instant instant) {
+    protected Optional<SpannerLock> findLock(String lockName) {
+        Struct row = spannerClient.singleUseReadOnlyTransaction()
+            .readRow(
+                TABLE,
+                Key.of(lockName),
+                List.of(LOCK_UNTIL, LOCKED_BY, LOCKED_AT));
+
+        return Optional.ofNullable(row).map(SpannerLock::new);
+    }
+
+
+    private Timestamp toTimestamp(Instant instant) {
         return Timestamp.ofTimeSecondsAndNanos(instant.getEpochSecond(), instant.getNano());
     }
+
+    protected class SpannerLock {
+        private final String lockName;
+        private final String lockedBy;
+        private final Timestamp lockedAt;
+        private final Timestamp lockedUntil;
+
+        protected SpannerLock(@NonNull Struct row) {
+            this.lockName = row.getString(NAME);
+            this.lockedBy = row.getString(LOCKED_BY);
+            this.lockedAt = row.getTimestamp(LOCKED_AT);
+            this.lockedUntil = row.getTimestamp(LOCK_UNTIL);
+        }
+
+        public String getLockName() {
+            return lockName;
+        }
+
+        public String getLockedBy() {
+            return lockedBy;
+        }
+
+        public Timestamp getLockedAt() {
+            return lockedAt;
+        }
+
+        public Timestamp getLockedUntil() {
+            return lockedUntil;
+        }
+    }
+
 }
